Introduce a Task api representation
